[metadata]
name = blockchain-richard-nagy
version = 1.0.0
author = Richard Antal Nagy
author_email = nagy.richard.antal@gmail.com
description = A simple proof of work blockchain class-based implementation
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://gitlab.com/richardnagy/security/blockchain
project_urls =
    Bug Tracker = https://gitlab.com/richardnagy/security/blockchain/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src